@@ -97,12 +97,20 @@
 #define PCI_VENDOR_ID_ALLIANCE 0x1142
 #endif
 
+#ifndef PCI_VENDOR_ID_MACRONIX
+#define PCI_VENDOR_ID_MACRONIX 0x10d9
+#endif
+
 #ifndef PCI_DEVICE_ID_3DFX_VOODOO2
 #define PCI_DEVICE_ID_3DFX_VOODOO2 2
 #endif
 
 #ifndef PCI_DEVICE_ID_ALLIANCE_AT3D
 #define PCI_DEVICE_ID_ALLIANCE_AT3D 0x643d
+#endif
+
+#ifndef PCI_DEVICE_ID_MACRONIX_MX86251
+#define PCI_DEVICE_ID_MACRONIX_MX86251 0x8626
 #endif
 
 #ifndef PCI_DEVICE_ID_3DFX_BANSHEE
@@ -133,6 +141,7 @@ static struct pci_card {
 	{PCI_VENDOR_ID_3DFX, 		PCI_DEVICE_ID_3DFX_VOODOO},
 	{PCI_VENDOR_ID_3DFX, 		PCI_DEVICE_ID_3DFX_VOODOO2},
 	{PCI_VENDOR_ID_ALLIANCE, 	PCI_DEVICE_ID_ALLIANCE_AT3D},
+	{PCI_VENDOR_ID_MACRONIX,	PCI_DEVICE_ID_MACRONIX_MX86251},
 	{PCI_VENDOR_ID_3DFX, 		PCI_DEVICE_ID_3DFX_BANSHEE},
 	{PCI_VENDOR_ID_3DFX, 		PCI_DEVICE_ID_3DFX_VOODOO3},
 	{PCI_VENDOR_ID_3DFX, 		PCI_DEVICE_ID_3DFX_VOODOO4}
@@ -757,6 +766,8 @@ static struct pci_device_id id_table_3dfx[] = {
 	{PCI_VENDOR_ID_3DFX, 		PCI_DEVICE_ID_3DFX_VOODOO2,
 	 PCI_ANY_ID, PCI_ANY_ID, 0, 0, 0},
 	{PCI_VENDOR_ID_ALLIANCE, 	PCI_DEVICE_ID_ALLIANCE_AT3D,
+	 PCI_ANY_ID, PCI_ANY_ID, 0, 0, 0},
+	{PCI_VENDOR_ID_MACRONIX, 	PCI_DEVICE_ID_MACRONIX_MX86251,
 	 PCI_ANY_ID, PCI_ANY_ID, 0, 0, 0},
 	{PCI_VENDOR_ID_3DFX, 		PCI_DEVICE_ID_3DFX_BANSHEE,
 	 PCI_ANY_ID, PCI_ANY_ID, 0, 0, 0},
