@@ -1,5 +1,9 @@
 2005-04-24  Ozkan Sezer  <sezeroz@gmail.com>
 
+	* 3dfx_device.c: Add Macronix MX86251 Voodoo Rush support.
+
+2005-04-24  Ozkan Sezer  <sezeroz@gmail.com>
+
 	* 3dfx_device.c (setmtrr_3dfx): Add missing break on default case.
 
 2005-04-23  Guillem Jover  <guillem@hadrons.org>
